my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENSHAREDTQMIC/T_ENSHAREDTQMIC-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENSHAREDTQMIC_STRUCT_H
#define T_ENSHAREDTQMIC_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENSHAREDTQMIC(void);


#endif /* not T_ENSHAREDTQMIC_STRUCT_H */
